--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,11 @@
 
 *.iml
 
+.idea/*
+.settings/
+
+build/
+out/
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
